[package]
name = "min_max_assign"
version = "1.0.0"
authors = ["qdot3"]
edition = "2021"

description = "Change min(max) implementation in Rust"
documentation = "https://docs.rs/min_max_assign/"
homepage = "https://crates.io/crates/min_max_assign"
repository = "https://github.com/qdot3/min_max_assign"

readme = "README.md"

keywords = ["mathematics", ]
categories = ["science"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }
